[tool.poetry]
name = "google-pubsub-emulator-python-async2"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.1.3"
google-api-core = "~2.10.2"
google-auth = "~2.17.1"
google-cloud-pubsub = "~2.13"
grpcio = "~1.51.3"

[tool.poetry.dev-dependencies]
mypy = "^1.0"
isort = "^5.12.0"
black = "^22.12"
pdbpp = "^0.10.3"
ipython = "^8.12.0"
safety = "^2.3.5"
flake8 = "^5.0.4"
autoflake = "^1.7"
grpc-stubs = "^1.24.11"
pyupgrade = "^3.3.1"
types-protobuf = "^4.22.0"
types-requests = "^2.28.11"
types-setuptools = "^67.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "google.auth.credentials"
ignore_missing_imports = true
