[tool.poetry]
name = "google-pubsub-emulator-python-async2"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.1.7"
google-api-core = "~2.22.0"
google-auth = "~2.34.0"
google-cloud-pubsub = "~2.21"
grpcio = "~1.68.0"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
isort = "^5.13.2"
black = "^24.8"
pdbpp = "^0.10.3"
ipython = "^8.12.3"
safety = "^3.2.10"
flake8 = "^5.0.4"
autoflake = "^1.7"
grpc-stubs = "^1.53.0"
pyupgrade = "^3.8.0"
types-protobuf = "^5.28.3"
types-requests = "^2.32.0"
types-setuptools = "^75.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "google.auth.credentials"
ignore_missing_imports = true
